--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -174,6 +174,9 @@
             margin-left: 0;
         }
 
+        .table {
+            background-color: var(--card-bg);
+        }
         /* Footer */
         .footer {
             background-color: var(--bg-color);
